# stdarch

./: .appveyor.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  TODO.md  Xargo.toml  aarch64-miri-tests.txt  josh-sync.toml  rust-version
.github/workflows/: main.yml
aarch64/: search-index.js  source-files.js
aarch64/core_arch/: all.html  index.html  sidebar-items.js
aarch64/std_detect/: index.html  macro.is_aarch64_feature_detected.html  macro.is_powerpc_feature_detected.html  sidebar-items.js
arm/: aliases.js  search-index.js  source-files.js
arm/core_arch/: all.html  index.html  sidebar-items.js
arm/std_detect/: index.html  macro.is_arm_feature_detected.html  sidebar-items.js
ci/: android-install-ndk.sh  android-install-sdk.sh  azure-install-rust.yml  azure.yml  ci.sh  dox.sh  intrinsic-test-docker.sh  intrinsic-test.sh  run-docker.sh  run.sh  windows.sh
coresimd/: Cargo.toml  build.rs  macros.rs  mod.rs  simd_llvm.rs
coresimd/aarch64/: neon.rs  v8.rs
coresimd/arm/: cmsis.rs  dsp.rs  mod.rs  neon.rs  v6.rs  v7.rs
coresimd/mips/: msa.rs
coresimd/mips64/: msa.rs
coresimd/powerpc/: altivec.rs
coresimd/powerpc64/: mod.rs  vsx.rs
coresimd/ppsv/: mod.rs  v128.rs  v16.rs  v256.rs  v32.rs  v512.rs  v64.rs
coresimd/ppvt/: mod.rs  v128.rs  (+5 more)
crates/stdarch-gen-wasm/: Cargo.toml
crates/stdarch-gen-wasm/src/: cli.rs  main.rs  matcher.rs  structs.rs  utils.rs
crates/stdarch-test/: Cargo.toml
crates/stdarch-test/src/: disassembly.rs  lib.rs  simd_test.rs
crates/wasm-assert-instr-tests/: Cargo.toml  readme.md
crates/wasm-assert-instr-tests/src/: lib.rs
crates/wasm-test/: Cargo.toml
crates/wasm-test/tests/: simd128.rs
examples/: Cargo.toml  connect5.rs  connect5_14_avx512.rs  hex.rs  nbody.rs
i686/: search-index.js  source-files.js
intrinsics_data/: wasm_simd128.h
mips/: search-index.js  settings.html  source-files.js
mips64/: search-index.js  source-files.js
powerpc/: search-index.js  source-files.js
powerpc64le/: search-index.js  source-files.js
src/: lib.rs  macros.rs
stdsimd/: mod.rs
stdsimd-test/: Cargo.toml
tests/: cpu-detection.rs
wasm32/: search-index.js  source-files.js
x86_64/: search-index.js  source-files.js
(+8510 files in other folders)
