[workspace]
members = [
  "crates/stdsimd-verify",
  "crates/stdsimd",
]
exclude = [
  "crates/wasm-assert-instr-tests"
]

[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = 1
opt-level = 3

[patch.crates-io]
wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen' }
wasm-bindgen-test = { git = 'https://github.com/rustwasm/wasm-bindgen' }
