[package]
name = "stdarch-test"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
assert-instr-macro = { path = "../assert-instr-macro" }
simd-test-macro = { path = "../simd-test-macro" }
cc = "1.0"
lazy_static = "1.0"
rustc-demangle = "0.1.8"
cfg-if = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmprinter = "0.2.6"

[features]
default = []
